# old-repositories-projects

./: .buildpath  .env.example  .eslintrc  .eslintrc-withoutAirBnb.yml  .eslintrc.yml  .gitignore  Cargo.toml  Dockerfile  Dockerfile-testing10  Dockerfile-testing11  Dockerfile-testing2  Dockerfile-testing3  Dockerfile-testing4  Dockerfile-testing5  Dockerfile-testing6  Dockerfile-testing7  Dockerfile-testing8  Dockerfile-testing9  DockerfileJenkins  Generic.xml  LICENSE  Mega.md  Mega.rd  NodeJsTypescriptExpressProject.md  README.md  README.md.mvng  RabbitVcs.py  RememberGotoAnything.py  ThreadPoolPocWorkspace.code-workspace  Vagrantfile  VisualStudioCode.md  WatcherDotnetCore.code-workspace  composer.json  configure-git-user-name-email  content.js  createDatabase.ts  createJsLibrary.js  credentials-example.json  docker-compose.yml  env-secret.sh  (+23 more)
Console/: Program.cs
ConsoleDotnetCore/: ConsoleDotnetCore.csproj  Program.cs
ConsoleWindows/: Console.csproj  Console.sln
DirectoryWatcher/: ContainerWatcher.cs  CreatingFileList.cs
GdPictureOcrPOC/: .gitignore  GdPictureOcrPOC.csproj  ProcessingVerification.cs  Program.cs
ThreadPoolPOC/: ProcessingVerification.cs  Program.cs
api/: auth.js  category.js  createBasicRegistry.js  data.js  firebase.js  index.js  product.js  productType.js  shipList.js  user.js  utils.js
bassiwebs.com_Magento-Easy-Responsive-Banner-Slider/: .project
business-card-react/: .env  package.json
cash-flow-firebase/: package-lock.json  package.json
cash-flow-frontend/: .env.example
certs/: pserver.key
cjl-template-js/: README.md  (+1 more)
(+1383 files in other folders)
